<resources>
    <string name="app_name">TicketManager</string>
    <string name="this_month">This month</string>
    <string name="_174_32">174.32 €</string>
    <string-array name="my_tickets">
        <item>Ticket 1</item>
        <item>Ticket 2</item>
        <item>Ticket 3</item>
    </string-array>
    <string name="logo">LOGO</string>
    <string name="log_in">LOGIN</string>
    <string name="log_in_google">LOGIN WITH GOOGLE</string>
    <string name="sign_up">SIGN UP</string>
    <string name="or">OR</string>
    <string name="name_last">Last Name</string>
    <string name="name_first">First Name</string>
    <string name="username_email">Username or Email</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_space"> Password</string>
    <string name="password_repeat">Repeat Password</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="remember_me">Remember me</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="take_photo">Take photo</string>
</resources>